--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,6 @@
-server.port = 8080
+spring.application.name=mock-proxy
+server.port=8080
+zuul.routes.proxy.path=/**
+zuul.routes.proxy.url=http://localhost:8081/
+
+request.body.part=1234
