[MP-0] Migrate on spring-cloud-gateway

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,5 @@
-spring.application.name=mock-proxy
 server.port=8080
-zuul.routes.proxy.path=/**
-zuul.routes.proxy.url=http://localhost:8081/
+proxy.path=/**
+proxy.url=http://localhost:8081/
 
 request.body.part=1234
