--- a/pom.xml
+++ b/pom.xml
@@ -13,20 +13,23 @@
     <artifactId>mock-proxy</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     <name>mock-proxy</name>
-    <description>mock-proxy</description>
+    <description>Can mock or can forward. You choose.</description>
 
     <properties>
         <java.version>1.8</java.version>
-
-        <cloud-dependencies.version>2021.0.0</cloud-dependencies.version>
-        <zuul.version>2.2.10.RELEASE</zuul.version>
+        <gateway.version>3.1.0</gateway.version>
     </properties>
 
     <dependencies>
         <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-configuration-processor</artifactId>
+            <optional>true</optional>
+        </dependency>
+        <dependency>
             <groupId>org.springframework.cloud</groupId>
-            <artifactId>spring-cloud-starter-netflix-zuul</artifactId>
-            <version>${zuul.version}</version>
+            <artifactId>spring-cloud-starter-gateway</artifactId>
+            <version>${gateway.version}</version>
         </dependency>
 
         <dependency>
@@ -41,18 +44,6 @@
             <scope>test</scope>
         </dependency>
     </dependencies>
-
-    <dependencyManagement>
-        <dependencies>
-            <dependency>
-                <groupId>org.springframework.cloud</groupId>
-                <artifactId>spring-cloud-dependencies</artifactId>
-                <version>${cloud-dependencies.version}</version>
-                <type>pom</type>
-                <scope>import</scope>
-            </dependency>
-        </dependencies>
-    </dependencyManagement>
 
     <build>
         <plugins>
