[MP-1] Enable H2 console

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,8 @@
+# server settings
 server.port=8080
+h2-console.port=8081
+
+# proxy settings
 proxy.path=/**
 proxy.url=http://localhost:8081/
 
@@ -8,5 +12,4 @@ spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=admin
 spring.datasource.password=admin
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
-spring.jpa.hibernate.ddl-auto=create
 spring.jpa.show-sql=true
