--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,7 @@
         <java.version>1.8</java.version>
         <gateway.version>3.1.0</gateway.version>
         <modelmapper.version>2.4.5</modelmapper.version>
+        <commons-lang3.version>3.12.0</commons-lang3.version>
     </properties>
 
     <dependencies>
@@ -46,6 +47,12 @@
             <groupId>org.modelmapper</groupId>
             <artifactId>modelmapper</artifactId>
             <version>${modelmapper.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-lang3</artifactId>
+            <version>${commons-lang3.version}</version>
         </dependency>
 
         <dependency>
