--- a/pom.xml
+++ b/pom.xml
@@ -11,12 +11,14 @@
 
     <groupId>com.github.afanas10101111</groupId>
     <artifactId>mock-proxy</artifactId>
-    <version>1.0.0</version>
+    <version>1.1.0</version>
     <name>mock-proxy</name>
     <description>Can mock or can forward. You choose.</description>
 
     <properties>
         <java.version>1.8</java.version>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
         <gateway.version>3.1.0</gateway.version>
         <modelmapper.version>2.4.5</modelmapper.version>
         <commons-lang3.version>3.12.0</commons-lang3.version>
