--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,8 +2,12 @@
 server.port=8080
 h2-console.port=8081
 
+# swagger settings
+springfox.documentation.swagger-ui.base-url=/_swagger
+springfox.documentation.swagger.v2.path=/_api-docs
+
 # proxy settings
-proxy.path=/**
+proxy.path-pattern=(/[^_].*)|(/)
 proxy.url=http://localhost:8081/
 
 # in-memory db settings
